--- a/assingment_app/package.json
+++ b/assingment_app/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@mui/x-date-pickers": "^7.24.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
